--- a/GlenRockAppV1/AndroidManifest.xml
+++ b/GlenRockAppV1/AndroidManifest.xml
@@ -12,8 +12,10 @@
         android:allowBackup="true"
         android:icon="@drawable/gl_icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        android:screenOrientation="portrait"
+        android:theme="@style/AppTheme" 
+        android:screenOrientation="portrait" 
+        android:debuggable="true">
+        
         <activity
             android:name="com.glenrockappv1.MainActivity"
             android:label="@string/app_name" >
