--- a/GlenRockAppV2/GlenRockAppV1/AndroidManifest.xml
+++ b/GlenRockAppV2/GlenRockAppV1/AndroidManifest.xml
@@ -10,6 +10,7 @@
  
     <uses-permission android:name="android.permission.READ_CALENDAR"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_CALENDAR"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@drawable/gl_icon"
