--- a/json2/GlenRockAppV1/AndroidManifest.xml
+++ b/json2/GlenRockAppV1/AndroidManifest.xml
@@ -10,18 +10,19 @@
  
     <uses-permission android:name="android.permission.READ_CALENDAR"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_CALENDAR"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@drawable/gl_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" 
-        android:screenOrientation="portrait" 
         android:debuggable="true">
         
         <activity
             android:name="com.glenrockappv1.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
